plugins/edu/harvard/catalyst/admin-tool/src/components/EditParameters/EditParameters.scss
.EditParameters{
  flex-grow: 1;
  width: 100%;
  .AddParam {
    margin-top: 0.7em;
    margin-bottom: 0.7em;
  }

  .MuiDataGrid-columnHeaders{
    background-color:   rgba(0, 0, 0, 0.12);
  }

  .MuiDataGrid-cell--editing {
    border: 1px solid  rgba(85, 108, 214) !important;
  }

  .MuiDataGrid-cell.MuiDataGrid-cell--editing:focus-within.missing {
    border: 1px solid  red !important;
    outline: 1px solid  red;
  }

  .MuiDataGrid-cell--editing.missing {
    border: 1px solid  red !important;
  }

  .missing {
    border: 1px solid  red !important;
  }

  .ParameterValueTextField {
    width: 100%;
    border: none;
    .MuiInputBase-root {
      outline: none;
    }
    .MuiOutlinedInput-notchedOutline {
      outline: none;
      border: none;
    }
  }

  .ParameterValueTextField:focus-visible {
    outline: none;
  }

  .MuiDataGrid-cell--editing:focus-visible {
    outline: none;
  }
}

